--- a/kanban-frondend/src/app/components/login/login.component.html
+++ b/kanban-frondend/src/app/components/login/login.component.html
@@ -22,10 +22,10 @@
         </mat-form-field>
 
         <div class="flex-c-c gap-32">
-            <button class="login-btn" mat-raised-button (click)="openDialog()">
+            <button class="login-btn" mat-raised-button (click)="registerDialog()">
               <mat-icon>how_to_reg</mat-icon>Register
             </button>
-            <button class="login-btn" mat-raised-button (click)="login()">
+            <button class="login-btn" mat-raised-button (click)="loginDialog()">
                 <mat-icon>login</mat-icon>Login
             </button>
         </div>
