--- a/kanban-frondend/src/app/components/board/board.component.html
+++ b/kanban-frondend/src/app/components/board/board.component.html
@@ -118,33 +118,35 @@
                                 </div>
                             </div>
                             <div class="board-media-row">
-                                <div *ngFor="let item of urgent" cdkDrag>
+                                <div *ngFor="let task of urgent" cdkDrag>
                                     <mat-card [ngClass]="{
                                         'board-card': currentTheme === 'default',
                                         'board-card-light': currentTheme === 'light-theme',
                                         'board-card-dark': currentTheme === 'dark-theme',
-                                        'overdue': isDatePast(item.date)}" [attr.id]="'CardId-' + item.id"
+                                        'overdue': isDatePast(task.date)}" [attr.id]="'CardId-' + task.id"
                                         class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
-                                                <mat-card-title>{{item.title}}</mat-card-title>
+                                                <mat-card-title>{{task.title}}</mat-card-title>
                                                 <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
-                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
-                                                <div [ngClass]="getPriorityClass(item.prio)"></div>
+                                                    class="board-card-subtitle ">{{task.subtitle}}</mat-card-subtitle>
+                                                <div [ngClass]="getPriorityClass(task.prio)"></div>
                                             </div>
                                         </mat-card-header>
                                         <mat-card-content>
-                                            <p>{{item.content}}</p>
+                                            <p>{{task.content}}</p>
                                             <p [ngClass]="{
                                                 'board-card-date': currentTheme === 'default',
                                                 'board-card-date-light': currentTheme === 'light-theme',
                                                 'board-card-date-dark': currentTheme === 'dark-theme'}"
-                                                class="board-card-date">{{getFormattedDate(item.date)}}</p>
+                                                class="board-card-date">{{getFormattedDate(task.date)}}</p>
                                         </mat-card-content>
                                         <mat-card-actions class="board-col-tools">
+                                            <mat-icon class="board-done-icon" matTooltip="mark as done!"
+                                                [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="doneTaskDialog()">check</mat-icon>
                                             <mat-icon class="board-col-icons" matTooltip="Edit"
                                                 [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="editTaskDialog()">edit</mat-icon>
                                             <mat-icon class="board-col-icons" matTooltip="Delete"
@@ -193,33 +195,35 @@
                                 </div>
                             </div>
                             <div class="board-media-row">
-                                <div *ngFor="let item of todo" cdkDrag>
+                                <div *ngFor="let task of todo" cdkDrag>
                                     <mat-card [ngClass]="{
                                         'board-card': currentTheme === 'default',
                                         'board-card-light': currentTheme === 'light-theme',
                                         'board-card-dark': currentTheme === 'dark-theme',
-                                        'overdue': isDatePast(item.date)}" [attr.id]="'CardId-' + item.id"
+                                        'overdue': isDatePast(task.date)}" [attr.id]="'CardId-' + task.id"
                                         class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
-                                                <mat-card-title>{{item.title}}</mat-card-title>
+                                                <mat-card-title>{{task.title}}</mat-card-title>
                                                 <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
-                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
-                                                <div [ngClass]="getPriorityClass(item.prio)"></div>
+                                                    class="board-card-subtitle ">{{task.subtitle}}</mat-card-subtitle>
+                                                <div [ngClass]="getPriorityClass(task.prio)"></div>
                                             </div>
                                         </mat-card-header>
                                         <mat-card-content>
-                                            <p>{{item.content}}</p>
+                                            <p>{{task.content}}</p>
                                             <p [ngClass]="{
                                                 'board-card-date': currentTheme === 'default',
                                                 'board-card-date-light': currentTheme === 'light-theme',
                                                 'board-card-date-dark': currentTheme === 'dark-theme'}"
-                                                class="board-card-date">{{getFormattedDate(item.date)}}</p>
+                                                class="board-card-date">{{getFormattedDate(task.date)}}</p>
                                         </mat-card-content>
                                         <mat-card-actions class="board-col-tools">
+                                            <mat-icon class="board-done-icon" matTooltip="mark as done!"
+                                                [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="doneTaskDialog()">check</mat-icon>
                                             <mat-icon class="board-col-icons" matTooltip="Edit"
                                                 [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="editTaskDialog()">edit</mat-icon>
                                             <mat-icon class="board-col-icons" matTooltip="Delete"
@@ -268,33 +272,35 @@
                                 </div>
                             </div>
                             <div class="board-media-row">
-                                <div *ngFor="let item of inProgress" cdkDrag>
+                                <div *ngFor="let task of inProgress" cdkDrag>
                                     <mat-card [ngClass]="{
                                         'board-card': currentTheme === 'default',
                                         'board-card-light': currentTheme === 'light-theme',
                                         'board-card-dark': currentTheme === 'dark-theme',
-                                        'overdue': isDatePast(item.date)}" [attr.id]="'CardId-' + item.id"
+                                        'overdue': isDatePast(task.date)}" [attr.id]="'CardId-' + task.id"
                                         class=" board-card" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
-                                                <mat-card-title>{{item.title}}</mat-card-title>
+                                                <mat-card-title>{{task.title}}</mat-card-title>
                                                 <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
-                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
-                                                <div [ngClass]="getPriorityClass(item.prio)"></div>
+                                                    class="board-card-subtitle ">{{task.subtitle}}</mat-card-subtitle>
+                                                <div [ngClass]="getPriorityClass(task.prio)"></div>
                                             </div>
                                         </mat-card-header>
                                         <mat-card-content>
-                                            <p>{{item.content}}</p>
+                                            <p>{{task.content}}</p>
                                             <p [ngClass]="{
                                                 'board-card-date': currentTheme === 'default',
                                                 'board-card-date-light': currentTheme === 'light-theme',
                                                 'board-card-date-dark': currentTheme === 'dark-theme'}"
-                                                class="board-card-date">{{getFormattedDate(item.date)}}</p>
+                                                class="board-card-date">{{getFormattedDate(task.date)}}</p>
                                         </mat-card-content>
                                         <mat-card-actions class="board-col-tools">
+                                            <mat-icon class="board-done-icon" matTooltip="mark as done!"
+                                                [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="doneTaskDialog()">check</mat-icon>
                                             <mat-icon class="board-col-icons" matTooltip="Edit"
                                                 [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="editTaskDialog()">edit</mat-icon>
                                             <mat-icon class="board-col-icons" matTooltip="Delete"
@@ -343,38 +349,32 @@
                                 <div class="mr-t-16 flex-c-c">Nothing done<mat-icon class="sad">mood_bad</mat-icon></div>
                             </div>
                             <div class="board-media-row">
-                                <div *ngFor="let item of done" cdkDrag>
+                                <div *ngFor="let task of done" cdkDrag>
                                     <mat-card [ngClass]="{
                                         'board-card': currentTheme === 'default',
                                         'board-card-light': currentTheme === 'light-theme',
-                                        'board-card-dark': currentTheme === 'dark-theme'}" [attr.id]="'CardId-' + item.id"
+                                        'board-card-dark': currentTheme === 'dark-theme'}" [attr.id]="'CardId-' + task.id"
                                         class="board-card doneIt" cdkDragPreview>
                                         <mat-card-header>
                                             <div class="flex-col">
-                                                <mat-card-title>{{item.title}}</mat-card-title>
+                                                <mat-card-title>{{task.title}}</mat-card-title>
                                                 <mat-card-subtitle [ngClass]="{
                                                     'board-card-subtitle': currentTheme === 'default',
                                                     'board-card-subtitle-light': currentTheme === 'light-theme',
                                                     'board-card-subtitle-dark': currentTheme === 'dark-theme'}"
-                                                    [attr.id]="'CardId-' + item.id" class=" board-card"
-                                                    class="board-card-subtitle ">{{item.subtitle}}</mat-card-subtitle>
-                                                <div [ngClass]="getPriorityClass(item.prio)"></div>
+                                                    [attr.id]="'CardId-' + task.id" class=" board-card"
+                                                    class="board-card-subtitle ">{{task.subtitle}}</mat-card-subtitle>
+                                                <div [ngClass]="getPriorityClass(task.prio)"></div>
                                             </div>
                                         </mat-card-header>
                                         <mat-card-content>
-                                            <p>{{item.content}}</p>
+                                            <p>{{task.content}}</p>
                                             <p [ngClass]="{
                                                 'board-card-date': currentTheme === 'default',
                                                 'board-card-date-light': currentTheme === 'light-theme',
                                                 'board-card-date-dark': currentTheme === 'dark-theme'}"
-                                                class="board-card-date">{{getFormattedDate(item.date)}}</p>
+                                                class="board-card-date">{{getFormattedDate(task.date)}}</p>
                                         </mat-card-content>
-                                        <mat-card-actions class="board-col-tools">
-                                            <mat-icon class="board-col-icons" matTooltip="Edit"
-                                                [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="editTaskDialog()">edit</mat-icon>
-                                            <mat-icon class="board-col-icons" matTooltip="Delete"
-                                                [matTooltipPosition]="position.value!" matTooltipShowDelay="750" (click)="deleteTaskDialog()">delete</mat-icon>
-                                        </mat-card-actions>
                                     </mat-card>
                                 </div>
                             </div>
