--- a/kanban-frondend/src/app/components/board/board.component.scss
+++ b/kanban-frondend/src/app/components/board/board.component.scss
@@ -379,6 +379,7 @@ mat-icon {
     border-radius: 10px;
     width: 20px;
     height: 3px;
+    margin:8px 0;
 }
 
 .medium {
@@ -386,6 +387,7 @@ mat-icon {
     border-radius: 10px;
     width: 20px;
     height: 3px;
+    margin:8px 0;
 }
 
 .low {
@@ -393,6 +395,7 @@ mat-icon {
     border-radius: 10px;
     width: 20px;
     height: 3px;
+    margin:8px 0;
 }
 
 .board-col-headline {
